@@ -171,6 +171,9 @@ gtk_window_group_get_current_grab (GtkWindowGroup *window_group)
 /*! \def geda_get_child_widget Get Child Bin widget Gtk < 3 */
 #define geda_get_child_widget(w) (void*)((GtkBin*)w)->child
 
+/*! \def geda_get_focus_widget Get Child Focus widget Gtk < 3*/
+#define geda_get_focus_widget(w) (void*)((GtkWindow*)w)->focus_widget
+
 /*! \def geda_get_widget_allocation Get Pointer to Allocation  Gtk < 3 */
 #define geda_get_widget_allocation(w) &(GTK_WIDGET(w)->allocation)
 
@@ -193,6 +196,9 @@ gtk_window_group_get_current_grab (GtkWindowGroup *window_group)
 
 /*! \def geda_get_child_widget Get Child Bin widget Gtk >= 3*/
 #define geda_get_child_widget(w) (void*)gtk_bin_get_child ((GtkBin*)w)
+
+/*! \def geda_get_focus_widget Get Child Focus widget Gtk >= 3*/
+#define geda_get_focus_widget(w) (void*)gtk_window_get_focus ((GtkWindow*)w)
 
 /*! \def geda_get_widget_allocation Get Pointer to Allocation  Gtk >= 3 */
 #define geda_get_widget_allocation(w) \
